fix: dark mode colors for share screen

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -33,6 +33,14 @@ svg {
 	color: #fff;
 }
 
+.dark .share-screen-content {
+	background-color: #000000;
+}
+
+.dark .share-screen-content svg {
+	color: #fff;
+}
+
 @font-face {
 	font-family: "Inter";
 	src: url("../assets/fonts/Inter/Inter-VariableFont.ttf") format("truetype");
